--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "leaflet": "^1.9.4",
     "mongodb": "^7.0.0",
     "next": "16.1.1",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-leaflet": "^5.0.0",
